# credit-risk-book

./: .gitignore  README.md  cover_design_philosophy.md  generate_cover.py  pyproject.toml  requirements-pdf.txt  run_tests.py
.claude/: settings.local.json
chapters/: 01_industry_overview.md  02_business_understanding.md  03_data_system.md  04_feature_engineering.md  05_scorecard.md  06_machine_learning.md  07_model_evaluation.md  08_model_deployment.md  09_model_monitoring.md  10_strategy_decision.md  11_anti_fraud.md  12_collection.md  13_graph_models.md  13_llm_in_risk.md  14_graph_models.md  14_sequence_models.md  15_llm_in_risk.md  15_sequence_models.md  16_llm_in_risk.md  17_references.md  appendix.md
chapters/diagrams/: README.md  ch04_feature_selection_pipeline.drawio  ch06_oof_cross_validation.drawio  ch06_pseudo_labeling.drawio  ch06_stacking_ensemble.drawio  ch14_customer_relationship_graph.drawio  ch14_gcn_message_passing.drawio  ch15_lstm_sequence.drawio  ch15_multi_modal_fusion.drawio
creditrisk/: __init__.py
creditrisk/data/: __init__.py
creditrisk/ensemble/: __init__.py
creditrisk/evaluation/: __init__.py
creditrisk/features/: __init__.py
creditrisk/models/: __init__.py
creditrisk/selection/: __init__.py
creditrisk/utils/: __init__.py
data/: README.md
notebooks/: ch00_data_setup.ipynb  ch04_feature_engineering.ipynb  ch05_scorecard.ipynb  ch06_machine_learning.ipynb
scripts/: README_BUILD.md  build_book.py  convert_drawio_to_svg.py  export_drawio_to_svg.sh  generate_pdf.py  update_version.py  生成 PDF 手册.md
